--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 *.class
 
+*.classpath
+*.settings
+
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
@@ -11,3 +14,4 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 /build/
+/target/
