--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,15 @@
 			<version>5.1.38</version>
 		</dependency>
 
+		<!-- Test Dependencies -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
+
+
 	</dependencies>
 
 
